Added Codemonk link

--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
       </tbody>
     </table>
     <hr>
-    <p><a href="contact-me.html" target="_blank">Contact me</a></p>
+    <p>
+      <a href="contact-me.html" target="_blank">Contact me</a>
+      <span> | </span>
+      <a href="https://dashboard.codemonk.ai/talent/mamichellen" target="_blank">My Codemonk</a>
+    </p>
   </body>
 </html>
